--- a/index.html
+++ b/index.html
@@ -3,127 +3,123 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Left 4 Dead - Landing Page</title>
+    <title>Left 4 Dead - Zombie Apocalypse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #111">
       <div class="container">
-        <a class="navbar-brand" href="#">Left 4 Dead</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand" href="#" style="font-family: 'Arial', sans-serif; color: #f44336; font-size: 1.8rem; font-weight: bold"> L4D </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon" style="background-color: #f44336"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-            <li class="nav-item"><a class="nav-link" href="#cta">Get Started</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#features" style="color: #dcdcdc; font-size: 1.1rem; transition: all 0.3s"> Features </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#testimonials" style="color: #dcdcdc; font-size: 1.1rem; transition: all 0.3s"> Testimonials </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta" style="color: #dcdcdc; font-size: 1.1rem; transition: all 0.3s"> Download </a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-section text-center py-5 text-light">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6 text-dark">
-            <h1>Welcome to Left 4 Dead</h1>
-            <p class="lead">Experience the ultimate co-op zombie survival game. Fight together or perish alone.</p>
-            <a href="#cta" class="btn btn-danger btn-lg mt-3 mb-4 text-dark">Play Now</a>
+    <section class="hero-section text-light">
+      <div class="container-fluid position-relative px-4">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg-6 text-center text-lg-start hero-text">
+            <h1 class="display-4 fw-bold">Welcome to <span class="text-danger">Left 4 Dead!</span></h1>
+            <p class="lead text-muted mt-3">Dive into the ultimate zombie survival experience. Team up with friends, fight for survival, and challenge yourself against hordes of zombies in epic campaigns.</p>
+            <div class="mt-4">
+              <a href="#cta" class="btn btn-danger btn-lg me-3 shadow-lg">Play Now</a>
+              <a href="#features" class="btn btn-outline-light btn-lg shadow-sm">Learn More</a>
+            </div>
           </div>
-          <div class="col-md-6">
-            <img src="img/herosection.jpg" alt="Left 4 Dead Hero" class="img-fluid rounded shadow" />
+          <div class="col-lg-5 text-center position-relative">
+            <img src="img/herosection.jpg" alt="Zombie Action" class="img-fluid hero-image rounded shadow" />
+            <div class="hero-overlay position-absolute"></div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Fitur Section -->
-    <section id="features" class="py-5">
-      <div class="container">
-        <h2 class="text-center mb-3 mt-3">Features</h2>
-        <div class="row g-4 justify-content-center">
+    <!-- Features Section -->
+    <section id="game-features" class="py-5">
+      <div class="container text-center">
+        <h2 class="text-uppercase fw-bold text-danger">Game Features</h2>
+        <p class="text-muted">Discover the unique features of the game. Dive into the immersive gameplay and thrilling campaigns.</p>
+        <div class="row mt-4">
+          <!-- Card 1 -->
           <div class="col-md-4">
-            <div class="card shadow feature-card">
-              <img src="img/1.jpg" height="250px" class="card-img-top" alt="Feature 1" />
-              <div class="card-body">
-                <h5 class="card-title">Co-op Gameplay</h5>
-                <p class="card-text">Team up with friends to survive hordes of zombies in intense co-op action.</p>
-              </div>
+            <div class="feature-card">
+              <img src="img/1.jpg" alt="Co-op Gameplay" class="card-image img-fluid" />
+              <h5 class="fw-bold text-danger mt-3">Co-op Gameplay</h5>
+              <p>Team up with friends and survive hordes of zombies in this thrilling co-op mode.</p>
             </div>
           </div>
+          <!-- Card 2 -->
           <div class="col-md-4">
-            <div class="card shadow feature-card">
-              <img src="img/2.jpg" height="250px" class="card-img-top" alt="Feature 2" />
-              <div class="card-body">
-                <h5 class="card-title">Dynamic AI Director</h5>
-                <p class="card-text">Experience unique gameplay every time with the AI Director that adapts to your performance.</p>
-              </div>
+            <div class="feature-card">
+              <img src="img/2.jpg" alt="Dynamic AI Director" class="card-image img-fluid" />
+              <h5 class="fw-bold text-danger mt-3">Dynamic AI Director</h5>
+              <p>Experience unique challenges tailored to your performance through the dynamic AI Director.</p>
             </div>
           </div>
+          <!-- Card 3 -->
           <div class="col-md-4">
-            <div class="card shadow feature-card">
-              <img src="img/31.jpg" height="250px" class="card-img-top" alt="Feature 3" />
-              <div class="card-body">
-                <h5 class="card-title">Epic Campaigns</h5>
-                <p class="card-text">Embark on multiple campaigns with unique stories and settings.</p>
-              </div>
+            <div class="feature-card">
+              <img src="img/3.jpg" alt="Epic Campaigns" class="card-image img-fluid" />
+              <h5 class="fw-bold text-danger mt-3">Epic Campaigns</h5>
+              <p>Embark on thrilling campaigns across diverse settings and fight for survival.</p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Testi Section -->
-    <section id="testimonials" class="bg-light py-5">
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-4">What Players Say</h2>
+        <h2 class="text-center text-danger mb-4">What Survivors Say</h2>
         <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active text-center mb-4">
-              <p class="lead">"Left 4 Dead is the best co-op game I've ever played. A masterpiece!"</p>
-              <h5>- kingGamer</h5>
+          <div class="carousel-inner text-center">
+            <div class="carousel-item active">
+              <p>"The best co-op experience ever!"</p>
+              <h5>- Player1</h5>
             </div>
-            <div class="carousel-item text-center mb-4">
-              <p class="lead">"The thrill of surviving a zombie horde with friends is unmatched."</p>
-              <h5>- SurvivorPro</h5>
-            </div>
-            <div class="carousel-item text-center mb-4">
-              <p class="lead">"Dynamic AI makes every playthrough feel fresh and exciting!"</p>
-              <h5>- ZombieSlayer</h5>
+            <div class="carousel-item">
+              <p>"An adrenaline rush every time!"</p>
+              <h5>- Player2</h5>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
     </section>
 
     <!-- Call-to-Action Section -->
-    <section id="cta" class="cta-section text-center py-5 text-light">
-      <div class="container text-dark mb-4">
-        <h2>Ready to Play?</h2>
-        <p class="lead">Join millions of players in the ultimate zombie survival game. Download now and survive the apocalypse!</p>
-        <a href="#" class="btn btn-danger btn-lg text-dark">Download Now</a>
+    <section id="cta" class="cta-section text-center py-5">
+      <div class="container">
+        <h2>Download Now</h2>
+        <p>Are you ready to survive? Click the button below to join the apocalypse.</p>
+        <a href="#" id="downloadBtn" class="btn btn-danger btn-lg">Download Now</a>
       </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
-      <p>Created By Sonjaya with <i class="bi bi-radioactive text-light"></i></p>
+    <footer class="text-center py-3">
+      <p>Created With <i class="bi bi-radioactive"></i> By Sonjaya</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="javascript/script.js"></script>
+    <script src="/javascript/script.js"></script>
   </body>
 </html>
